add condition - click last item

--- a/app/src/main/res/layout/num_four.xml
+++ b/app/src/main/res/layout/num_four.xml
@@ -29,6 +29,7 @@
 
         <Button
             android:id="@+id/btn1"
+            android:enabled="false"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginRight="40dp"
@@ -37,6 +38,7 @@
             tools:text="0"/>
         <Button
             android:id="@+id/btn2"
+            android:enabled="false"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:textSize="26dp"
@@ -50,6 +52,7 @@
 
         <Button
             android:id="@+id/btn3"
+            android:enabled="false"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:textSize="26dp"
@@ -57,6 +60,7 @@
             tools:text="0"/>
         <Button
             android:id="@+id/btn4"
+            android:enabled="false"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:textSize="26dp"
