--- a/app/src/main/res/layout/num_five.xml
+++ b/app/src/main/res/layout/num_five.xml
@@ -15,12 +15,14 @@
         android:layout_marginTop="30dp"
         android:textAlignment="center" />
     <TextView
+        android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/description1"
         android:textSize="24dp"
         android:textAlignment="center"
-        android:layout_margin="50dp"/>
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="50dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
