--- a/app/src/main/res/layout/num_four.xml
+++ b/app/src/main/res/layout/num_four.xml
@@ -16,12 +16,14 @@
         android:textAlignment="center" />
 
     <TextView
+        android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/description1"
+        tools:text="description"
         android:textSize="24dp"
         android:textAlignment="center"
-        android:layout_margin="50dp"/>
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="50dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
