--- a/app/src/main/res/layout/num_four.xml
+++ b/app/src/main/res/layout/num_four.xml
@@ -31,19 +31,13 @@
 
         <Button
             android:id="@+id/btn1"
-            android:enabled="false"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            style="@style/my_button_style"
             android:layout_marginRight="40dp"
             android:layout_marginBottom="40dp"
-            android:textSize="26dp"
             tools:text="0"/>
         <Button
             android:id="@+id/btn2"
-            android:enabled="false"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:textSize="26dp"
+            style="@style/my_button_style"
             tools:text="0"/>
 
     </LinearLayout>
@@ -54,18 +48,12 @@
 
         <Button
             android:id="@+id/btn3"
-            android:enabled="false"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:textSize="26dp"
+            style="@style/my_button_style"
             android:layout_marginRight="40dp"
             tools:text="0"/>
         <Button
             android:id="@+id/btn4"
-            android:enabled="false"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:textSize="26dp"
+            style="@style/my_button_style"
             tools:text="0"/>
 
     </LinearLayout>
