--- a/app/src/main/res/layout/num_five.xml
+++ b/app/src/main/res/layout/num_five.xml
@@ -30,29 +30,20 @@
 
         <Button
             android:id="@+id/btn1"
-            android:enabled="false"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginBottom="40dp"
-            android:textSize="26dp"
+            style="@style/my_button_style"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="30dp"
             tools:text="0"/>
         <Button
             android:id="@+id/btn2"
-            android:enabled="false"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:textSize="26dp"
+            style="@style/my_button_style"
             tools:text="0"/>
 
     </LinearLayout>
     <Button
         android:id="@+id/btn3"
-        android:enabled="false"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="40dp"
-        android:textSize="26dp"
+        style="@style/my_button_style"
+        android:layout_marginBottom="30dp"
         tools:text="0"/>
 
     <LinearLayout
@@ -61,18 +52,12 @@
 
         <Button
             android:id="@+id/btn4"
-            android:enabled="false"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:textSize="26dp"
-            android:layout_marginRight="40dp"
+            style="@style/my_button_style"
+            android:layout_marginRight="50dp"
             tools:text="0"/>
         <Button
             android:id="@+id/btn5"
-            android:enabled="false"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:textSize="26dp"
+            style="@style/my_button_style"
             tools:text="0"/>
 
     </LinearLayout>
