--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="colorAccent">#FF4081</color>
     <color name="incorrect">#F00</color>
     <color name="black">#555</color>
+    <color name="transparent">#00000000</color>
+    <color name="dialogbg">#00909090</color>
+
 </resources>
 
 
