--- a/app/src/main/res/layout/num_eight.xml
+++ b/app/src/main/res/layout/num_eight.xml
@@ -26,56 +26,59 @@
         android:layout_marginBottom="50dp"/>
 
     <LinearLayout
-        android:gravity="right"
-        android:layout_marginBottom="40dp"
-        android:layout_width="260dp"
+        android:gravity="left"
+        android:layout_marginBottom="30dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/btn1"
             style="@style/my_button_style"
+            android:layout_marginRight="30dp"
             tools:text="0"/>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:gravity="right"
-        android:layout_marginBottom="40dp"
-        android:layout_width="260dp"
-        android:layout_height="wrap_content">
-
         <Button
             android:id="@+id/btn2"
             style="@style/my_button_style"
-            android:layout_marginRight="40dp"
+            android:layout_marginRight="30dp"
             tools:text="0"/>
         <Button
             android:id="@+id/btn3"
             style="@style/my_button_style"
+            android:layout_marginRight="30dp"
+            tools:text="0"/>
+        <Button
+            android:id="@+id/btn4"
+            style="@style/my_button_style"
+            android:layout_marginRight="30dp"
             tools:text="0"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:gravity="right"
-        android:layout_width="260dp"
+        android:gravity="left"
+        android:layout_marginBottom="30dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/btn4"
-            style="@style/my_button_style"
-            android:layout_marginRight="40dp"
-            tools:text="0"/>
-        <Button
             android:id="@+id/btn5"
             style="@style/my_button_style"
-            android:layout_marginRight="40dp"
-
+            android:layout_marginRight="30dp"
             tools:text="0"/>
         <Button
             android:id="@+id/btn6"
             style="@style/my_button_style"
+            android:layout_marginRight="30dp"
+            tools:text="0"/>
+        <Button
+            android:id="@+id/btn7"
+            style="@style/my_button_style"
+            android:layout_marginRight="30dp"
+            tools:text="0"/>
+        <Button
+            android:id="@+id/btn8"
+            style="@style/my_button_style"
+            android:layout_marginRight="30dp"
             tools:text="0"/>
 
     </LinearLayout>
