--- a/app/src/main/res/layout/num_five.xml
+++ b/app/src/main/res/layout/num_five.xml
@@ -25,15 +25,16 @@
         android:layout_marginBottom="50dp"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:layout_width="260dp"
         android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/btn1"
             style="@style/my_button_style"
-            android:layout_marginRight="50dp"
-            android:layout_marginBottom="30dp"
-            tools:text="0"/>
+            android:layout_marginRight="140dp"
+            tools:text="0" />
+
         <Button
             android:id="@+id/btn2"
             style="@style/my_button_style"
@@ -43,17 +44,17 @@
     <Button
         android:id="@+id/btn3"
         style="@style/my_button_style"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="40dp"
         tools:text="0"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="260dp"
         android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/btn4"
             style="@style/my_button_style"
-            android:layout_marginRight="50dp"
+            android:layout_marginRight="140dp"
             tools:text="0"/>
         <Button
             android:id="@+id/btn5"
