--- a/app/src/main/res/layout/num_nine.xml
+++ b/app/src/main/res/layout/num_nine.xml
@@ -26,7 +26,6 @@
         android:layout_marginBottom="50dp"/>
 
     <LinearLayout
-        android:gravity="right"
         android:layout_marginBottom="40dp"
         android:layout_width="260dp"
         android:layout_height="wrap_content">
@@ -34,17 +33,8 @@
         <Button
             android:id="@+id/btn1"
             style="@style/my_button_style"
+            android:layout_marginRight="40dp"
             tools:text="0"/>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:gravity="right"
-        android:layout_marginBottom="40dp"
-        android:layout_width="260dp"
-        android:layout_height="wrap_content">
-
         <Button
             android:id="@+id/btn2"
             style="@style/my_button_style"
@@ -57,8 +47,10 @@
 
     </LinearLayout>
 
+
+
     <LinearLayout
-        android:gravity="right"
+        android:layout_marginBottom="40dp"
         android:layout_width="260dp"
         android:layout_height="wrap_content">
 
@@ -71,10 +63,30 @@
             android:id="@+id/btn5"
             style="@style/my_button_style"
             android:layout_marginRight="40dp"
-
             tools:text="0"/>
         <Button
             android:id="@+id/btn6"
+            style="@style/my_button_style"
+            tools:text="0"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="260dp"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btn7"
+            style="@style/my_button_style"
+            android:layout_marginRight="40dp"
+            tools:text="0"/>
+        <Button
+            android:id="@+id/btn8"
+            style="@style/my_button_style"
+            android:layout_marginRight="40dp"
+            tools:text="0"/>
+        <Button
+            android:id="@+id/btn9"
             style="@style/my_button_style"
             tools:text="0"/>
 
